[package]
name = "ks89-consumer"
version = "1.2.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "consumer"
path = "src/main.rs"

[lib]
name = "consumer"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
thiserror = "2.0.11"
anyhow = "1.0.96"
lapin = "^2.5.0"
tokio = { version = "^1.43.0", features = ["full"] }
tokio-executor-trait = "^2.1.3"
tokio-reactor-trait = "^1.1.0"
mongodb = "^3.2.1"
log = "^0.4.26"
log4rs = { version = "^1.3.0", features = ["console_appender", "rolling_file_appender"] }
dotenvy = "^0.15.7"
envy = "^0.4.2"
futures = "^0.3.31"
futures-lite = "^2.6.0"

# To use Serialize and Deserialize traits, you must include Serde.
# The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "^1.0.218", features = ["derive"] }
serde_json = "^1.0.139"

[dev-dependencies]
uuid = { version = "1.14.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.9.0"
# better looking rust assertions
pretty_assertions = "^1.4.1"
# include also serde_json with the feature 'preserve_order' to don't change the order of keys
# 'preserve_order' is required to compare results in a predictible way in testing
serde_json = { version = "^1.0.139", features = ["preserve_order"] }
