[package]
name = "ks89-consumer"
version = "3.0.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "consumer"
path = "src/main.rs"

[lib]
name = "consumer"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
lapin = { version = "4.3.0" }
tokio = { version = "^1.50.0", features = ["full"] }
mongodb = "^3.5.1"
futures-lite = "^2.6.1"
# error handling
thiserror = "2.0.18"
anyhow = "1.0.102"
# logger
tracing = "^0.1.44"
tracing-appender = "^0.2.4"
tracing-subscriber = { version = "^0.3.22", features = ["env-filter"] }
# env vars
dotenvy = "^0.15.7"
envy = "^0.4.2"

# To use Serialize and Deserialize traits, you must include Serde.
# The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"

[dev-dependencies]
uuid = { version = "1.22.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.10.0"
# better looking rust assertions
pretty_assertions = "^1.4.1"
# include also serde_json with the feature 'preserve_order' to don't change the order of keys
# 'preserve_order' is required to compare results in a predictible way in testing
serde_json = { version = "^1.0.149", features = ["preserve_order"] }
test-log = {version = "0.2.19", features = ["trace"]}